# LunaOS

./: ARM64_PORTING_GUIDE.md  Makefile  README.md  fix-build-xnu-x86.py  wayland-puredarwin-roadmap.docx
apps/files/: CMakeLists.txt  app.desktop  luna-files.c
apps/terminal/: build-foot.sh
apps/text-editor/: CMakeLists.txt  app.desktop  luna-editor.c
darwin-wayland/: CMakeLists.txt
darwin-wayland/compositor/: CMakeLists.txt
darwin-wayland/compositor/include/: luna-compositor.h
darwin-wayland/compositor/src/: main.c
darwin-wayland/drm-shim/include/: libdrm-darwin.h
darwin-wayland/drm-shim/kern/: IODRMShim.cpp  Info.plist
darwin-wayland/drm-shim/user/: libdrm-darwin.c
darwin-wayland/graphics/config/: graphics-config.mk
darwin-wayland/graphics/include/: darwin-gbm.c  gbm.h
darwin-wayland/graphics/patches/mesa/: 0001-darwin-platform.patch  0002-lavapipe-darwin.patch  0004-radv-darwin-stub.patch
darwin-wayland/graphics/patches/vulkan-loader/: 0001-darwin-platform.patch
darwin-wayland/graphics/scripts/: verify-graphics.sh
darwin-wayland/kernel/patches/: 0001-lunaos-kernel-config.patch
darwin-wayland/kernel/scripts/: build-xnu.sh
darwin-wayland/patches/wlroots/: 0002-pixman-renderer-darwin.patch  drm_darwin_session.h
darwin-wayland/scripts/: build-compositor.sh
darwin-wayland/userland/rootfs-skel/private/etc/: rc.lunaos
darwin-wayland/userland/scripts/: build-iso.sh  build-userland.sh
drm-shim/include/: drm_darwin.h
drm-shim/kern/: IODRMShim.entitlements  IODRMShim.h
evdev-bridge/: darwin-evdev-bridge.c
graphics/patches/mesa/: 0003-anv-darwin-stub.patch
graphics/scripts/: build-graphics.sh
kernel/config/: com.apple.Boot.plist  kernel-config.mk
kernel/patches/: 0002-ioframebuffer-public-api.patch
kernel/scripts/: verify-kernel.sh
libwayland-darwin/: wayland-darwin-event-loop.c
patches/wlroots/: 0001-drm-darwin-backend.patch  drm_darwin_session.c
seatd-darwin/: seatd-darwin.c
shell/: CMakeLists.txt
shell/include/: luna-shell.h
shell/src/: luna-launcher.c  luna-panel.c  luna-shell-main.c  luna-wallpaper.c
userland/config/: components.txt
userland/rootfs-skel/private/etc/: fstab  group  passwd
userland/scripts/: verify-rootfs.sh
